--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng server.js",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -13,7 +13,6 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.1.0",
-    "@angular/cli": "^7.3.4",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
@@ -27,12 +26,12 @@
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "typescript": "~3.1.6",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "@angular/cli": "^7.3.4",
+    "@angular/compiler-cli": "^7.2.7"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.4",
-    "@angular/cli": "^7.3.4",
-    "@angular/compiler-cli": "^7.2.7",
     "@angular/language-service": "~7.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
@@ -48,8 +47,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "tslint": "~5.11.0"
   },
   "engines": {
     "node": "11.1.0",
